[package]
name = "quad-rts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.13"
macroquad-tiled = "0.1.1"

[lib]
name = "quad_rts"
path = "src/lib.rs"

[[bin]]
name = "shotcaller"
path = "src/main.rs"
